syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

import "scalapb/scalapb.proto";
import "domain/types.proto";
import "ddata/replication.proto";

option java_multiple_files = true;
option java_package = "com.rides.domain";

package com.orders.domain;

option (scalapb.options) = {
  lenses: true,
  preserve_unknown_fields: false,
  //retain_source_code_info: true,
  no_default_values_in_constructor: false,
  no_primitive_wrappers: true,
  single_file: true,
  preamble: "sealed trait VehicleCmd extends scalapb.GeneratedMessage",
};

message ReportLocation {
  option (scalapb.message).extends = "VehicleCmd";
  int64 vehicle_id = 1;
  types.Location location = 2 [(scalapb.field).no_box = true];
  string replyTo = 3;
  //string requestId = 4;
}

message GetLocation {
  option (scalapb.message).extends = "VehicleCmd";
  int64  vehicle_id = 1;
  string replyTo = 2;
  int64  version = 3; //Causally consistent cut
  types.Location local = 4 [(scalapb.field).no_box = true];
}

message StopEntity {
  option (scalapb.message).extends = "VehicleCmd";
}

